--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,3 +1,3 @@
 .container-2o3qEW {
-    background-color: var(--backrgound-primary);
+    background-color: var(--background-primary);
 }
