--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -1,6 +1,6 @@
 .container-2o3qEW {
     .member-48YF_l,
     .members-3WRCEx {
-        background-color: var(--backrgound-primary);
+        background-color: var(--background-primary);
     }
 }
