--- a/src/theme/modals/_generic.scss
+++ b/src/theme/modals/_generic.scss
@@ -3,6 +3,6 @@
         box-shadow: var(--dark-elevation-border), var(--dark-elevation-high);
     }
     .footerSeparator-3U8YsT {
-        box-shadow: inset 0 1px 0 var(--modal-footer-backrgound);
+        box-shadow: inset 0 1px 0 var(--modal-footer-background);
     }
 }
