--- a/src/theme/pages/_app-directory.scss
+++ b/src/theme/pages/_app-directory.scss
@@ -1,3 +1,3 @@
 #app-mount .directoryModal-YJsOMv {
-    background-color: var(--backrgound-primary);
+    background-color: var(--background-primary);
 }
